--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 alembic==0.9.6
 click==6.7
+decorator==4.1.2
 dominate==2.3.1
 Flask==0.12.2
 Flask-Bootstrap==3.3.7.1
@@ -9,6 +10,8 @@ Flask-Script==2.0.6
 Flask-SQLAlchemy==2.3.2
 Flask-Testing==0.6.2
 Flask-WTF==0.14.2
+infinity==1.4
+intervals==0.8.0
 itsdangerous==0.24
 Jinja2==2.9.6
 Mako==1.0.7
@@ -19,6 +22,8 @@ python-dateutil==2.6.1
 python-editor==1.0.3
 six==1.11.0
 SQLAlchemy==1.1.14
+validators==0.12.0
 visitor==0.1.3
 Werkzeug==0.12.2
 WTForms==2.1
+WTForms-Components==0.10.3
